Primeiro commit na branch faustina

--- a/SAEW/src/main/webapp/css/diagnostico.css
+++ b/SAEW/src/main/webapp/css/diagnostico.css
@@ -84,6 +84,10 @@ body{
 	justify-content:space-between;
 }
 
+.avaliacao-titulo{
+	padding:20px;
+}
+
 .butao-cont div{
 	display:flex;
 	flex-direction:column;
