--- a/SAEW/src/main/webapp/css/intervecoeslia.css
+++ b/SAEW/src/main/webapp/css/intervecoeslia.css
@@ -70,11 +70,11 @@ body{
 	height:300px;
 	display:flex;
 	flex-direction:column;
-	justify-content:space-between;
+	/*justify-content:space-between;*/
 }
 
 .avaliacao-cont{
-	width:90%;
+	width:60%;
 	height:600px;
 	background-color:#ffffff;
 	padding:10px;
@@ -82,6 +82,10 @@ body{
 	display:flex;
 	flex-direction:column;
 	justify-content:space-between;
+}
+
+.avaliacao-titulo{
+	padding-left:20px;
 }
 
 .butao-cont div{
@@ -105,6 +109,7 @@ body{
 	display:flex;
 	flex-direction:row;
 	padding:20px 17px;
+	margin-bottom:5px;
 	background-color:#26a2bd;
 	border:1px solid #26a2bd;
 }
@@ -121,7 +126,7 @@ body{
 
 .btn-avaliacao a .text{
 	display:flex;
-	width:500px;
+	width:508px;
 	text-align:center;
 	color:white;
 }
@@ -207,84 +212,197 @@ body{
 	color:white;
 }
 
-/*TABELA*/
-.avaliacao-cont table{
-	border-collapse:collapse;
-	border:1px solid #ffffff;
+.check-item{
+	padding:4px 0px;
 }
 
-.avaliacao-cont td{
-	padding:5px 20px;
-	border:1px solid #f9f9f9;
-	font-size:14px;
-}
-
-.avaliacao-cont tbody tr:hover{
-	background-color:#c5dde3;
-}
-
-
-.avaliacao-cont thead td{
-	font-weight:500;
-}
-
-
-/*FILTRO*/
-.filtro{
+/*RADIO*/
+.radio-cont{
 	display:flex;
 	flex-direction:row;
-	justify-content:space-between;
-	align-items:center;
-	padding-bottom:10px;
+	justify-content:end;
 }
 
-.pesquisa{
+.radio-item{
+	margin:0px 15px;
 	display:flex;
 	flex-direction:row;
-	justify-content:space-between;
 	align-items:center;
+	justify-content:center;
 }
 
-.pesquisa input{
-	font-size:14px;
-	outline:none;
-	padding:5px;
-	/*font-weight:500;*/
+.radio-lista{
+	display:flex;
+	flex-direction:row;
+	justify-content:end;
 }
 
-.paciente{
-	margin-left:20px;
-}
-
-.filter-icon {
-	margin-right:10px;
-}
-
-.filter-icon i{
-	font-size:21px;
+.radio-item input{
+	margin:0px 2px;
 }
 
 /**/
-.total-item, .ordem-item, .mostra-item{
-	display:flex;
-	flex-direction:row;
-}
 
-.afasta{
-	padding-right:5px;
-}
-
-.avaliacao-footer, .ordem-mostra{
+.componente-item{
+	padding:20px;
 	display:flex;
 	flex-direction:row;
 	justify-content:space-between;
 }
 
-.ordem-mostra select{
-	padding:3px;
+.dir, .esq{
+	width:50%;
+}
+
+.esq{
+	padding-left:40px;
+}
+
+/**/
+.observacao{
+	padding:20px 0px;
+}
+
+.observacao .t-area{
+	display:flex;
+	flex-direction:column;
+	justify-content:space-between;
+	width:100%;
+}
+
+.observacao .t-area textarea{
+	height:95px;
+	padding:10px;
 	outline:none;
 }
 
-.ordem-item{
-	padding-right:20px;
+.legenda-cont{
+	padding-top:20px;
+}
+
+.legenda{
+	padding:10px;
+	border:1px solid #a4a4a4;
+	border-radius:2px;
+}
+
+.leg-01{
+	display:flex;
+	flex-direction:row;
+	margin-bottom:5px;
+}
+
+.leg-inaltera{
+	margin-right:15px;
+}
+
+.leg-02{
+	margin-bottom:5px;
+}
+
+/*PACIENTE*/
+.paciente{
+	width:25%;
+	background-color:#ffffff;
+	margin-left:20px;
+	padding:15px;
+}
+
+
+/**/
+.codito{
+	display:flex;
+	flex-direction:row;
+}
+
+.text{
+	display:flex;
+	flex-direction:row;
+}
+
+.text input{
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+.input-leito{
+	margin-left:90px;
+}
+
+
+.input-paciente{
+	display:flex;
+	flex-direction:column;
+}
+
+.input-paciente input{
+	width:100%;
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+
+.interna{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+}
+
+.text-interna{
+	display:flex;
+	flex-direction:row;
+	width:70px;
+}
+
+.text-interna input{
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+.text-internacao{
+	margin-right:10px;
+}
+
+.text-internacao input{
+	width:100%;
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+
+.nascimento{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+}
+
+.text-nasc{
+	display:flex;
+	flex-direction:row;
+	width:70px;
+}
+
+.text-nasc input{
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+.text-nascimento{
+	margin-right:10px;
+}
+
+.text-nasc input, .text-nascimento input{
+	width:100%;
+	outline:none;
+	padding:2px;
+	font-size:14px;
+}
+
+.codito, .input-paciente, .interna, .nascimento, .perido{
+	margin-bottom:4px;
 }
