--- a/SAEW/src/main/webapp/css/login.css
+++ b/SAEW/src/main/webapp/css/login.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&family=Roboto:ital,wght@0,100;0,400;1,900&display=swap');
 *{
@@ -51,7 +52,7 @@ body{
 }
 
 .login-usuario input, .login-senha input{
-	/*outline:none;*/
+	outline:none;
 	font-size:16.5px;
 	padding:9px;
 	width:100%;
