Primeiro commit na branch faustina após problema com ficheiro index_lock

--- a/SAEW/src/main/webapp/css/index.css
+++ b/SAEW/src/main/webapp/css/index.css
@@ -38,7 +38,7 @@ body{
 	padding-bottom:45px;
 	padding-top:30px;
 	border:0.1px solid #ECECEC;
-	box-shadow:20px 20px 20px black; /*boxshadow*/
+	box-shadow:20px 20px 20px red; /*boxshadow*/
 }
 
 .login-logo{
