--- a/SAEW/src/main/webapp/css/lista.css
+++ b/SAEW/src/main/webapp/css/lista.css
@@ -12,72 +12,26 @@
 
 body{
 	background-color:#eeeeee;
+	position:relative;
 }
-
-
-/*ESTILIZANDO O MENU*/
-.parent nav{
-	background-color:#5D6D7E;
-	padding: 0px 50px;
-}
-
-.nav-menu{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	align-items:center;
-}
-
-.nav-item ul{
-	display:flex;
-	flex-direction:row;
-}
-
-.nav-item ul li{
-	padding: 10px 15px;
-	display:flex;
-	align-items:center;
-	cursor:pointer;
-}
-
-.nav-item ul li a{
-	color:black;
-}
-
-.nav-item ul li i{
-	padding-left:4px;
-}
-
-/*CORTINA -  DROPDOWN MENU*/
+/**/
 .cortina{
-	padding: 0px 50px;
-}
-
-.cortina-cont{
-	display:flex;
-	flex-direction:row;
-	padding-top:6px;
-	justify-content:end;
-}
-
-/*.cubo{
-	width:20px;
-	height:20px;
-	background-color:white;
 	position:absolute;
-	top:10px;
-	right:20px;
-	transform:rotate(45deg);
-}*/
+	top:42px;
+	left:1096px;
+	height:0px;
+	transition:0.5s;
+	overflow:hidden;
+	box-shadow:0px 5px 8px #eeeeee;
+	display:flex;
+}
 
 .cortina-sub{
 	width:220px;
-	height:auto;
+	height:240px;
 	padding:15px;
-	background-color:red;
-	/*display:none;*/
-	position:absolute;
-	box-shadow:0px 0px 15px #eeeeee;
+	background-color:#fbfbfb;
+	/*box-shadow:0px 0px 15px red;*/
 }
 
 .cortina-item{
@@ -106,16 +60,28 @@ body{
 	margin-bottom:12px;
 }
 
+.info label{
+	color:#3f444a;
+}
+
 .cortina-barra{
 	height:1px;
 	background-color:#a9a9a9;
 	margin:5px 0px;
+	margin-bottom:12px;
 }
 
 .cortina-down{
 	display:flex;
 	flex-direction:row;
 	margin-bottom:10px;
+	align-items:center;
+}
+
+.cortina-down i{
+	font-size:18px;
+	padding:3px;
+	color:#3f444a;
 }
 
 .cortina-item-02{
@@ -128,10 +94,12 @@ body{
 	justify-content:space-between;
 	cursor:pointer;
 	font-weight:500;
+	font-size:15px;
+	color:#5D6D7E;
 }
 
 .cortina-item-02 a:hover{
-	/*font-weight:500;*/
+	color:#b4bdc8;
 	cursor:pointer;
 }
 
@@ -139,6 +107,66 @@ body{
 	display:flex;
 	flex-direction:row;
 	width:80px;
+}
+
+/*CORTINA-02*/
+.cortina-02{
+	position:absolute;
+	top:42px;
+	left:983px;
+	height:0px;
+	transition:0.5s;
+	overflow:hidden;
+	box-shadow:0px 5px 8px #eeeeee;
+	display:flex;
+}
+
+/*CORTINA-03*/
+.cortina-03{
+	position:absolute;
+	top:42px;
+	left:868px;
+	height:0px;
+	transition:0.5s;
+	overflow:hidden;
+	box-shadow:0px 5px 8px #eeeeee;
+	display:flex;
+}
+
+/**/
+
+/*ESTILIZANDO O MENU*/
+.parent nav{
+	background-color:#5D6D7E;
+	padding: 0px 50px;
+}
+
+.nav-menu{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	align-items:center;
+}
+
+.nav-item ul{
+	display:flex;
+	flex-direction:row;
+}
+
+.nav-item ul li{
+	padding: 10px 0px;
+	padding-left:40px;
+	display:flex;
+	align-items:center;
+	cursor:pointer;
+}
+
+.nav-item ul li a{
+	color:black;
+}
+
+.nav-item ul li i{
+	padding-left:4px;
 }
 
 /*ESTILIZANDO CORPO*/
