--- a/SAEW/src/main/webapp/css/avaliacoes.css
+++ b/SAEW/src/main/webapp/css/avaliacoes.css
@@ -18,17 +18,18 @@ body{
 .cortina{
 	position:absolute;
 	top:42px;
-	left:1096px;
+	left:1070px;
 	height:0px;
 	transition:0.5s;
 	overflow:hidden;
 	box-shadow:0px 5px 8px #eeeeee;
 	display:flex;
+	
 }
 
 .cortina-sub{
-	width:220px;
-	height:240px;
+	width:245px;
+	height:270px;
 	padding:15px;
 	background-color:#fbfbfb;
 	/*box-shadow:0px 0px 15px red;*/
@@ -42,7 +43,7 @@ body{
 .cortina-item .image{
 	width:40px;
 	height:40px;
-	background-color:gray;
+	background-color:#f4f4f4;
 	border-radius:50%;
 }
 
@@ -106,7 +107,7 @@ body{
 .image-item{
 	display:flex;
 	flex-direction:row;
-	width:80px;
+	width:45px;
 }
 
 /*CORTINA-02*/
@@ -125,12 +126,20 @@ body{
 .cortina-03{
 	position:absolute;
 	top:42px;
-	left:868px;
+	left:935px;
 	height:0px;
 	transition:0.5s;
 	overflow:hidden;
 	box-shadow:0px 5px 8px #eeeeee;
 	display:flex;
+}
+
+.cortina-sub-03{
+	width:270px;
+	height:270px;
+	padding:15px;
+	background-color:#fbfbfb;
+	/*box-shadow:0px 0px 15px red;*/
 }
 
 /**/
