--- a/SAEW/src/main/webapp/css/avaliacao.css
+++ b/SAEW/src/main/webapp/css/avaliacao.css
@@ -12,137 +12,8 @@
 
 body{
 	background-color:#eeeeee;
-	position:relative;
-}
-/**/
-.cortina{
-	position:absolute;
-	top:42px;
-	left:1070px;
-	height:0px;
-	transition:0.5s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-	
 }
 
-.cortina-sub{
-	width:245px;
-	height:270px;
-	padding:15px;
-	background-color:#fbfbfb;
-	/*box-shadow:0px 0px 15px red;*/
-}
-
-.cortina-item{
-	display:flex;
-	flex-direction:row;
-}
-
-.cortina-item .image{
-	width:40px;
-	height:40px;
-	background-color:#f4f4f4;
-	border-radius:50%;
-}
-
-.cortina-item .info{
-	display:flex;
-	flex-direction:column;
-	margin-left:10px;
-}
-
-.info .perfil{
-	font-size:14px;
-}
-
-.info{
-	margin-bottom:12px;
-}
-
-.info label{
-	color:#3f444a;
-}
-
-.cortina-barra{
-	height:1px;
-	background-color:#a9a9a9;
-	margin:5px 0px;
-	margin-bottom:12px;
-}
-
-.cortina-down{
-	display:flex;
-	flex-direction:row;
-	margin-bottom:10px;
-	align-items:center;
-}
-
-.cortina-down i{
-	font-size:18px;
-	padding:3px;
-	color:#3f444a;
-}
-
-.cortina-item-02{
-	width:100%;
-}
-
-.cortina-item-02 a{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	cursor:pointer;
-	font-weight:500;
-	font-size:15px;
-	color:#5D6D7E;
-}
-
-.cortina-item-02 a:hover{
-	color:#b4bdc8;
-	cursor:pointer;
-}
-
-.image-item{
-	display:flex;
-	flex-direction:row;
-	width:45px;
-}
-
-/*CORTINA-02*/
-.cortina-02{
-	position:absolute;
-	top:42px;
-	left:983px;
-	height:0px;
-	transition:0.5s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-}
-
-/*CORTINA-03*/
-.cortina-03{
-	position:absolute;
-	top:42px;
-	left:935px;
-	height:0px;
-	transition:0.5s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-}
-
-.cortina-sub-03{
-	width:270px;
-	height:270px;
-	padding:15px;
-	background-color:#fbfbfb;
-	/*box-shadow:0px 0px 15px red;*/
-}
-
-/**/
 
 /*ESTILIZANDO O MENU*/
 .parent nav{
@@ -163,8 +34,7 @@ body{
 }
 
 .nav-item ul li{
-	padding: 10px 0px;
-	padding-left:40px;
+	padding: 10px 15px;
 	display:flex;
 	align-items:center;
 	cursor:pointer;
@@ -177,6 +47,7 @@ body{
 .nav-item ul li i{
 	padding-left:4px;
 }
+
 
 /*ESTILIZANDO CORPO*/
 .componente{
@@ -207,7 +78,7 @@ body{
 	width:60%;
 	height:600px;
 	background-color:#ffffff;
-	padding:10px;
+	padding:0px; /*padding:0px;*/
 	
 	display:flex;
 	flex-direction:column;
@@ -240,13 +111,13 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin-bottom:5px;
-	background-color:#26a2bd;
-	border:1px solid #26a2bd;
+	background-color:#26bd70;
+	border:1px solid #26bd70;
 }
 
 .btn-avaliacao a:hover{
-	background-color:#28b8d7;
-	border:1px solid #28b8d7;
+	background-color:#32cd7e;
+	border:1px solid #32cd7e;
 }
 
 .btn-avaliacao i{
@@ -267,8 +138,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-enfermagem i{
@@ -290,8 +161,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-relatorio{
@@ -299,8 +170,8 @@ body{
 }
 
 .btn-relatorio a:hover, .btn-enfermagem a:hover{
-	background-color:#ebbb2c;
-	border:1px solid #ebbb2c;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-relatorio i{
@@ -321,8 +192,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	/*margin:5px 0px;*/
-	background-color:#eb3a3a;
-	border:1px solid #eb3a3a;
+	background-color:#d54a4a;
+	border:1px solid #d54a4a;
 }
 
 .btn-sair a:hover{
@@ -342,110 +213,54 @@ body{
 	color:white;
 }
 
-.check-item{
-	padding:4px 0px;
-}
-
-/*RADIO*/
-.radio-cont{
+/*PARTE PRINCIPAL, MENU DAS AVALIACOES*/
+/*TABE CONTROL*/
+.btn-tabe{
 	display:flex;
-	flex-direction:row;
-	justify-content:end;
+	border-bottom:1px solid #c9c9c9;
 }
 
-.radio-item{
-	margin:0px 15px;
-	display:flex;
-	flex-direction:row;
-	align-items:center;
-	justify-content:center;
-}
-
-.radio-lista{
-	display:flex;
-	flex-direction:row;
-	justify-content:end;
-}
-
-.radio-item input{
-	margin:0px 2px;
-	cursor:pointer;
-}
-
-/**/
-
-.comboBox select{
-	padding:5px;
+.btn-tabe button{
+	background-color:transparent;
+	border:none;
 	outline:none;
-	margin-bottom:10px;
-	font-size:15px;
-	display:flex;
-	flex-direction:row;
-	width:100%;
+	cursor:pointer;
+	padding:14px 16px;
+	font-weight:500;
 }
-
-.comboBox select option{
-	font-size:15px;
-}
-
+/**/
 .componente-item{
 	padding:20px;
+}
+
+.dir form{
 	display:flex;
 	flex-direction:row;
 	justify-content:space-between;
 }
 
-.dir, .esq{
-	width:50%;
-}
+/*PARTE ONE | PARTE TWO | PARTE THREE*/
 
-.esq{
-	padding-left:40px;
-}
-
-/**/
-.observacao{
-	padding:20px 0px;
-}
-
-.observacao .t-area{
+.parteone, .partetwo, .partethree{
 	display:flex;
 	flex-direction:column;
 	justify-content:space-between;
-	width:100%;
+	width:32%;
 }
 
-.observacao .t-area textarea{
-	height:95px;
-	padding:10px;
-	outline:none;
+.dir-cont{
+	border:1px solid #c9c9c9;
+	padding:15px;
 }
 
-.legenda-cont{
-	padding-top:20px;
+.dir-cont-02{
+	border:1px solid #c9c9c9;
+	padding:15px;
+	margin-top:15px;
 }
 
-.legenda{
-	padding:10px;
-	border:1px solid #a4a4a4;
-	border-radius:2px;
-}
-
-.leg-01{
-	display:flex;
-	flex-direction:row;
-	margin-bottom:5px;
-}
-
-.leg-inaltera{
-	margin-right:15px;
-}
-
-.leg-02{
-	margin-bottom:5px;
-}
-
-/*PACIENTE*/
+/*FIM PARTE PRINCIPAL, MENU DAS AVALIACOES*/
+/*DADOS DO PACIENTE*/
 .paciente{
 	width:25%;
 	background-color:#ffffff;
@@ -550,4 +365,92 @@ body{
 
 .codito, .input-paciente, .interna, .nascimento, .perido{
 	margin-bottom:4px;
+}
+
+/*COMBOBOX GERAL*/
+.comboBox select{
+	padding:5px;
+	outline:none;
+	margin-bottom:5px; /*margin-bottom:10px;*/
+	font-size:15px;
+	display:flex;
+	flex-direction:row;
+	width:100%;
+}
+
+.comboBox select option{
+	font-size:15px;
+}
+
+/*TEXT INPUT GERAL*/
+.drenagem{
+	display:flex;
+	flex-direction:row;
+}
+
+.drenagem input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+/*DATA INPUT GERAL*/
+.svd-dia{
+	display:flex;
+	flex-direction:row;
+	padding-bottom:5px;
+}
+
+.svd-dia input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+.data{
+	display:flex;
+	flex-direction:row;
+	padding-bottom:5px;
+}
+
+.data input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+/*RADIO INPUT GERAL*/
+
+.radio-ite{
+	display:flex;
+	flex-direction:row;
+}
+
+.radio-ite input, .radio-ite label{
+	cursor:pointer;
+}
+
+.btn-radio-01, .btn-radio-02{
+	display:flex;
+	flex-direction:row;
+}
+
+.btn-radio-01{
+	padding-right:15px;
+}
+
+.il input{
+	margin-right:3px;
+}
+
+/*CHECK INPUT GERAL*/
+.check-item{
+	padding:4px 0px;
+}
+
+.check-item input, .check-item label{
+	cursor:pointer;
 }
