--- a/SAEW/src/main/webapp/css/intervecoeslia.css
+++ b/SAEW/src/main/webapp/css/intervecoeslia.css
@@ -110,13 +110,13 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin-bottom:5px;
-	background-color:#26a2bd;
-	border:1px solid #26a2bd;
+	background-color:#26bd70;
+	border:1px solid #26bd70;
 }
 
 .btn-avaliacao a:hover{
-	background-color:#28b8d7;
-	border:1px solid #28b8d7;
+	background-color:#32cd7e;
+	border:1px solid #32cd7e;
 }
 
 .btn-avaliacao i{
@@ -137,8 +137,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-enfermagem i{
@@ -160,8 +160,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-relatorio{
@@ -169,8 +169,8 @@ body{
 }
 
 .btn-relatorio a:hover, .btn-enfermagem a:hover{
-	background-color:#ebbb2c;
-	border:1px solid #ebbb2c;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-relatorio i{
@@ -191,8 +191,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	/*margin:5px 0px;*/
-	background-color:#eb3a3a;
-	border:1px solid #eb3a3a;
+	background-color:#d54a4a;
+	border:1px solid #d54a4a;
 }
 
 .btn-sair a:hover{
