--- a/SAEW/src/main/webapp/css/menu.css
+++ b/SAEW/src/main/webapp/css/menu.css
@@ -136,8 +136,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-enfermagem i{
@@ -159,8 +159,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-relatorio{
@@ -168,8 +168,8 @@ body{
 }
 
 .btn-relatorio a:hover, .btn-enfermagem a:hover{
-	background-color:#ebbb2c;
-	border:1px solid #ebbb2c;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-relatorio i{
@@ -190,8 +190,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	/*margin:5px 0px;*/
-	background-color:#eb3a3a;
-	border:1px solid #eb3a3a;
+	background-color:#d54a4a;
+	border:1px solid #d54a4a;
 }
 
 .btn-sair a:hover{
