--- a/SAEW/src/main/webapp/css/diagnostico.css
+++ b/SAEW/src/main/webapp/css/diagnostico.css
@@ -34,7 +34,8 @@ body{
 }
 
 .nav-item ul li{
-	padding: 10px 15px;
+	padding: 10px 0px;
+	padding-left:40px;
 	display:flex;
 	align-items:center;
 	cursor:pointer;
@@ -216,6 +217,7 @@ body{
 .check-item input{
 	margin:7px 0px;
 	cursor:pointer;
+	background-color:#5D6D7E;
 }
 
 .check-item label{
