--- a/SAEW/src/main/webapp/css/tab.css
+++ b/SAEW/src/main/webapp/css/tab.css
@@ -34,7 +34,8 @@ body{
 }
 
 .nav-item ul li{
-	padding: 10px 15px;
+	padding: 10px 0px;
+	padding-left:40px;
 	display:flex;
 	align-items:center;
 	cursor:pointer;
@@ -47,6 +48,7 @@ body{
 .nav-item ul li i{
 	padding-left:4px;
 }
+
 
 /*ESTILIZANDO CORPO*/
 .componente{
@@ -75,7 +77,7 @@ body{
 
 .avaliacao-cont{
 	width:60%;
-	height:600px;
+	height:auto; /*600px*/
 	background-color:#ffffff;
 	padding:0px; /*padding:0px;*/
 	
@@ -110,13 +112,13 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin-bottom:5px;
-	background-color:#26a2bd;
-	border:1px solid #26a2bd;
+	background-color:#26bd70;
+	border:1px solid #26bd70;
 }
 
 .btn-avaliacao a:hover{
-	background-color:#28b8d7;
-	border:1px solid #28b8d7;
+	background-color:#32cd7e;
+	border:1px solid #32cd7e;
 }
 
 .btn-avaliacao i{
@@ -137,8 +139,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-enfermagem i{
@@ -160,8 +162,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-relatorio{
@@ -169,8 +171,8 @@ body{
 }
 
 .btn-relatorio a:hover, .btn-enfermagem a:hover{
-	background-color:#ebbb2c;
-	border:1px solid #ebbb2c;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-relatorio i{
@@ -191,8 +193,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	/*margin:5px 0px;*/
-	background-color:#eb3a3a;
-	border:1px solid #eb3a3a;
+	background-color:#d54a4a;
+	border:1px solid #d54a4a;
 }
 
 .btn-sair a:hover{
@@ -212,208 +214,7 @@ body{
 	color:white;
 }
 
-.check-item{
-	padding:4px 0px;
-}
-
-/*.check-item input, .check-item label{
-	cursor:pointer;
-}*/
-
-/*RADIO*/
-.radio-cont{
-	display:flex;
-	flex-direction:row;
-	justify-content:end;
-}
-
-.radio-item{
-	margin:0px 15px;
-	display:flex;
-	flex-direction:row;
-	align-items:center;
-	justify-content:center;
-}
-
-.radio-lista{
-	display:flex;
-	flex-direction:row;
-	justify-content:end;
-}
-
-.radio-item input{
-	margin:0px 2px;
-	cursor:pointer;
-}
-
-/**/
-
-.comboBox select{
-	padding:5px;
-	outline:none;
-	margin-bottom:5px; /*margin-bottom:10px;*/
-	font-size:15px;
-	display:flex;
-	flex-direction:row;
-	width:100%;
-}
-
-.comboBox select option{
-	font-size:15px;
-}
-
-.componente-item{
-	padding:20px;
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
-
-/*.dir, .esq{
-	width:50%;
-}*/
-
-/*DIR*/
-.dir form{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
-
-/*Parte One*/
-/*.parteone{
-	display:flex;
-	flex-direction:column;
-}*/
-
-.dir-cont{
-	/*width:70%;*/
-	border:1px solid black;
-	padding:15px;
-}
-
-.dir-cont-02{
-	/*width:70%;*/
-	border:1px solid black;
-	padding:15px;
-	margin-top:12px;
-}
-
-.radio-ite{
-	display:flex;
-	flex-direction:row;
-}
-
-.radio-ite input, .radio-ite label{
-	cursor:pointer;
-}
-
-.btn-radio-01, .btn-radio-02{
-	display:flex;
-	flex-direction:row;
-}
-
-.btn-radio-01{
-	padding-right:15px;
-}
-
-.il input{
-	margin-right:3px;
-}
-
-/**/
-.drenagem{
-	display:flex;
-	flex-direction:row;
-}
-
-.drenagem input{
-	outline:none;
-	padding:4px;
-	font-size:14px;
-	width:100%;
-}
-
-
-/*Parte Two*/
-/*.partetwo{
-	margin:0px 10px;
-}
-
-/*Parte Three*/
-.svd-dia{
-	display:flex;
-	flex-direction:row;
-	padding-bottom:5px;
-}
-
-.svd-dia input{
-	outline:none;
-	padding:4px;
-	font-size:14px;
-	width:100%;
-}
-
-.data{
-	display:flex;
-	flex-direction:row;
-	padding-bottom:5px;
-}
-
-.data input{
-	outline:none;
-	padding:4px;
-	font-size:14px;
-	width:100%;
-}
-
-.esq{
-	padding-left:40px;
-}
-
-/**/
-.observacao{
-	padding:20px 0px;
-}
-
-.observacao .t-area{
-	display:flex;
-	flex-direction:column;
-	justify-content:space-between;
-	width:100%;
-}
-
-.observacao .t-area textarea{
-	height:95px;
-	padding:10px;
-	outline:none;
-}
-
-.legenda-cont{
-	padding-top:20px;
-}
-
-.legenda{
-	padding:10px;
-	border:1px solid #a4a4a4;
-	border-radius:2px;
-}
-
-.leg-01{
-	display:flex;
-	flex-direction:row;
-	margin-bottom:5px;
-}
-
-.leg-inaltera{
-	margin-right:15px;
-}
-
-.leg-02{
-	margin-bottom:5px;
-}
-
-
+/*PARTE PRINCIPAL, MENU DAS AVALIACOES*/
 /*TABE CONTROL*/
 .btn-tabe{
 	display:flex;
@@ -429,9 +230,40 @@ body{
 	font-weight:500;
 }
 /**/
+.componente-item{
+	padding:20px;
+	display:flex;
+	flex-direction:column;
+}
 
+.dir form{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+}
 
-/*PACIENTE*/
+/*PARTE ONE | PARTE TWO | PARTE THREE*/
+
+.parteone, .partetwo, .partethree{
+	display:flex;
+	flex-direction:column;
+	justify-content:space-between;
+	width:32%;
+}
+
+.dir-cont{
+	border:1px solid #c9c9c9;
+	padding:15px;
+}
+
+.dir-cont-02{
+	border:1px solid #c9c9c9;
+	padding:15px;
+	margin-top:15px;
+}
+
+/*FIM PARTE PRINCIPAL, MENU DAS AVALIACOES*/
+/*DADOS DO PACIENTE*/
 .paciente{
 	width:25%;
 	background-color:#ffffff;
@@ -536,4 +368,92 @@ body{
 
 .codito, .input-paciente, .interna, .nascimento, .perido{
 	margin-bottom:4px;
+}
+
+/*COMBOBOX GERAL*/
+.comboBox select{
+	padding:5px;
+	outline:none;
+	margin-bottom:5px; /*margin-bottom:10px;*/
+	font-size:15px;
+	display:flex;
+	flex-direction:row;
+	width:100%;
+}
+
+.comboBox select option{
+	font-size:15px;
+}
+
+/*TEXT INPUT GERAL*/
+.drenagem{
+	display:flex;
+	flex-direction:row;
+}
+
+.drenagem input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+/*DATA INPUT GERAL*/
+.svd-dia{
+	display:flex;
+	flex-direction:row;
+	padding-bottom:5px;
+}
+
+.svd-dia input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+.data{
+	display:flex;
+	flex-direction:row;
+	padding-bottom:5px;
+}
+
+.data input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
+}
+
+/*RADIO INPUT GERAL*/
+
+.radio-ite{
+	display:flex;
+	flex-direction:row;
+}
+
+.radio-ite input, .radio-ite label{
+	cursor:pointer;
+}
+
+.btn-radio-01, .btn-radio-02{
+	display:flex;
+	flex-direction:row;
+}
+
+.btn-radio-01{
+	padding-right:15px;
+}
+
+.il input{
+	margin-right:3px;
+}
+
+/*CHECK INPUT GERAL*/
+.check-item{
+	padding:4px 0px;
+}
+
+.check-item input, .check-item label{
+	cursor:pointer;
 }
