--- a/SAEW/src/main/webapp/css/credential.css
+++ b/SAEW/src/main/webapp/css/credential.css
@@ -12,137 +12,8 @@
 
 body{
 	background-color:#eeeeee;
-	position:relative;
-}
-/**/
-.cortina{
-	position:absolute;
-	top:42px;
-	left:1070px;
-	height:0px;
-	transition:0.8s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-
 }
 
-.cortina-sub{
-	width:245px;
-	height:270px;
-	padding:15px;
-	background-color:#fbfbfb;
-	/*box-shadow:0px 0px 15px red;*/
-}
-
-.cortina-item{
-	display:flex;
-	flex-direction:row;
-}
-
-.cortina-item .image{
-	width:40px;
-	height:40px;
-	background-color:#f4f4f4;
-	border-radius:50%;
-}
-
-.cortina-item .info{
-	display:flex;
-	flex-direction:column;
-	margin-left:10px;
-}
-
-.info .perfil{
-	font-size:14px;
-}
-
-.info{
-	margin-bottom:12px;
-}
-
-.info label{
-	color:#3f444a;
-}
-
-.cortina-barra{
-	height:1px;
-	background-color:#a9a9a9;
-	margin:5px 0px;
-	margin-bottom:12px;
-}
-
-.cortina-down{
-	display:flex;
-	flex-direction:row;
-	margin-bottom:10px;
-	align-items:center;
-}
-
-.cortina-down i{
-	font-size:18px;
-	padding:3px;
-	color:#3f444a;
-}
-
-.cortina-item-02{
-	width:100%;
-}
-
-.cortina-item-02 a{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	cursor:pointer;
-	font-weight:500;
-	font-size:15px;
-	color:#5D6D7E;
-}
-
-.cortina-item-02 a:hover{
-	color:#b4bdc8;
-	cursor:pointer;
-}
-
-.image-item{
-	display:flex;
-	flex-direction:row;
-	width:45px;
-}
-
-/*CORTINA-02*/
-.cortina-02{
-	position:absolute;
-	top:42px;
-	left:983px;
-	height:0px;
-	transition:0.5s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-}
-
-/*CORTINA-03*/
-.cortina-03{
-	position:absolute;
-	top:42px;
-	left:935px;
-	height:0px;
-	transition:0.5s;
-	overflow:hidden;
-	box-shadow:0px 5px 8px #eeeeee;
-	display:flex;
-}
-
-.cortina-sub-03{
-	width:270px;
-	height:270px;
-	padding:15px;
-	background-color:#fbfbfb;
-	/*box-shadow:0px 0px 15px red;*/
-}
-
-/**/
 
 /*ESTILIZANDO O MENU*/
 .parent nav{
@@ -208,10 +79,11 @@ body{
 	height:600px;
 	background-color:#ffffff;
 	padding:10px;
-
+	
 	display:flex;
 	flex-direction:column;
 	justify-content:space-between;
+	/*border:0.5px solid #5D6D7E;*/
 }
 
 .avaliacao-titulo{
@@ -240,13 +112,13 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin-bottom:5px;
-	background-color:#26a2bd;
-	border:1px solid #26a2bd;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-avaliacao a:hover{
-	background-color:#28b8d7;
-	border:1px solid #28b8d7;
+	background-color:#32cd7e;
+	border:1px solid #32cd7e;
 }
 
 .btn-avaliacao i{
@@ -267,8 +139,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-enfermagem i{
@@ -290,8 +162,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin:5px 0px;
-	background-color:#e3ba41;
-	border:1px solid #e3ba41;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
 }
 
 .btn-relatorio{
@@ -299,8 +171,8 @@ body{
 }
 
 .btn-relatorio a:hover, .btn-enfermagem a:hover{
-	background-color:#ebbb2c;
-	border:1px solid #ebbb2c;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-relatorio i{
@@ -321,8 +193,8 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	/*margin:5px 0px;*/
-	background-color:#eb3a3a;
-	border:1px solid #eb3a3a;
+	background-color:#d54a4a;
+	border:1px solid #d54a4a;
 }
 
 .btn-sair a:hover{
@@ -342,37 +214,15 @@ body{
 	color:white;
 }
 
-.check-item{
-	padding:4px 0px;
+.check-item input{
+	margin:7px 0px;
+	cursor:pointer;
+	background-color:#5D6D7E;
 }
 
-/*RADIO*/
-.radio-cont{
-	display:flex;
-	flex-direction:row;
-	justify-content:end;
-}
-
-.radio-item{
-	margin:0px 15px;
-	display:flex;
-	flex-direction:row;
-	align-items:center;
-	justify-content:center;
-}
-
-.radio-lista{
-	display:flex;
-	flex-direction:row;
-	justify-content:end;
-}
-
-.radio-item input{
-	margin:0px 2px;
+.check-item label{
 	cursor:pointer;
 }
-
-/**/
 
 .comboBox select{
 	padding:5px;
@@ -401,6 +251,7 @@ body{
 
 .esq{
 	padding-left:40px;
+	padding-top:15px;
 }
 
 /**/
@@ -416,33 +267,9 @@ body{
 }
 
 .observacao .t-area textarea{
-	height:95px;
+	height:90px;
 	padding:10px;
 	outline:none;
-}
-
-.legenda-cont{
-	padding-top:20px;
-}
-
-.legenda{
-	padding:10px;
-	border:1px solid #a4a4a4;
-	border-radius:2px;
-}
-
-.leg-01{
-	display:flex;
-	flex-direction:row;
-	margin-bottom:5px;
-}
-
-.leg-inaltera{
-	margin-right:15px;
-}
-
-.leg-02{
-	margin-bottom:5px;
 }
 
 /*PACIENTE*/
