Trabalhando nas paginas credential e database

--- a/SAEW/src/main/webapp/css/credential.css
+++ b/SAEW/src/main/webapp/css/credential.css
@@ -117,8 +117,8 @@ body{
 }
 
 .btn-avaliacao a:hover{
-	background-color:#32cd7e;
-	border:1px solid #32cd7e;
+	background-color:#70849a;
+	border:1px solid #70849a;
 }
 
 .btn-avaliacao i{
@@ -216,8 +216,8 @@ body{
 
 .check-item input{
 	margin:7px 0px;
-	cursor:pointer;
-	background-color:#5D6D7E;
+	/*cursor:pointer;*/
+	/*background-color:#5D6D7E;*/
 }
 
 .check-item label{
@@ -255,22 +255,6 @@ body{
 }
 
 /**/
-.observacao{
-	padding:20px 0px;
-}
-
-.observacao .t-area{
-	display:flex;
-	flex-direction:column;
-	justify-content:space-between;
-	width:100%;
-}
-
-.observacao .t-area textarea{
-	height:90px;
-	padding:10px;
-	outline:none;
-}
 
 /*PACIENTE*/
 .paciente{
@@ -377,4 +361,17 @@ body{
 
 .codito, .input-paciente, .interna, .nascimento, .perido{
 	margin-bottom:4px;
+}
+
+/*TEXT INPUT GERAL*/
+.drenagem{
+	display:flex;
+	flex-direction:row;
+}
+
+.drenagem input{
+	outline:none;
+	padding:4px;
+	font-size:14px;
+	width:100%;
 }
