--- a/SAEW/src/main/webapp/css/indexa.css
+++ b/SAEW/src/main/webapp/css/indexa.css
@@ -39,7 +39,7 @@ body{
 	padding-bottom:45px;
 	padding-top:30px;
 	border:0.1px solid #ECECEC;
-	box-shadow:10px 10px 10px yellow;
+	box-shadow:0px 5px 8px #eeeeee;
 }
 
 .login-logo{
@@ -118,6 +118,7 @@ body{
 .login-copy p{
 	font-size:14.2px;
 	color:#515151;
+	text-align:center;/**/
 }
 
 .login-copy a{
