--- a/SAEW/src/main/webapp/css/index.css
+++ b/SAEW/src/main/webapp/css/index.css
@@ -11,7 +11,7 @@
 }
 
 body{
-	background-image:url("../img/login.png");
+	background-image:url("../img/fundo.png");
 	background-size:cover;
 }
 
@@ -21,7 +21,6 @@ body{
 	display:flex;
 	justify-content:center;
 	align-items:center;
-	/*background-color:yellow;*/
 }
 
 .login-label{
@@ -37,8 +36,11 @@ body{
 	padding:0px 40px;
 	padding-bottom:45px;
 	padding-top:30px;
-	border:0.1px solid #ECECEC;
-	box-shadow:20px 20px 20px red; /*boxshadow*/
+	border:1px solid #ECECEC;
+}
+
+form{
+	box-shadow:0px 0px 8px #353535;
 }
 
 .login-logo{
@@ -58,7 +60,6 @@ body{
 	font-size:16.5px;
 	padding:9px;
 	width:100%;
-	/*border:1px solid #BBBBBB;*/
 	font-family:Verdana, Geneva, Tahoma, sans-serif;
 	border-radius:3px;
 	border:1px solid #3B81C7;
@@ -98,7 +99,7 @@ body{
 
 .login-submit input{
 	width:100%;
-	background-color:#3B81C7;
+	background-color:#5d6d7e;
 	/*background-color:#5D6D7E;
 	border:1px solid #5D6D7E;*/
 	padding:15px 0px;
@@ -108,6 +109,12 @@ body{
 	color:white;
 	cursor:pointer;
 	border-radius:3px;
+	transition:1s;
+}
+
+.login-submit input:hover{
+	background-color:#70849a;
+	transition:1s;
 }
 
 .login-submit{
