--- a/SAEW/src/main/webapp/css/menu.css
+++ b/SAEW/src/main/webapp/css/menu.css
@@ -15,6 +15,7 @@ body{
 	position:relative;
 }
 
+
 /*CORTINA*/
 .cortina-parent{
 	display:flex;
@@ -65,7 +66,7 @@ body{
 }
 
 .info .perfil{
-	font-size:14px;
+	font-size:15px;
 }
 
 .info{
@@ -73,7 +74,7 @@ body{
 }
 
 .info label{
-	color:#3f444a;
+	color:#5D6D7E;
 }
 
 .cortina-barra{
@@ -96,6 +97,27 @@ body{
 	color:#3f444a;
 }
 
+
+.cortina-item-02{
+	width:100%;
+}
+
+.cortina-item-02 a{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	cursor:pointer;
+	font-weight:500;
+	font-size:15px;
+	color:#5D6D7E;
+}
+
+.cortina-item-02 a:hover{
+	color:#b4bdc8;
+	cursor:pointer;
+}
+
+
 .image-item{
 	display:flex;
 	flex-direction:row;
@@ -109,7 +131,7 @@ body{
 	top:42px;
 	right:160px;
 	height:0px;
-	transition:0.8s;
+	transition:0.9s;
 	overflow:hidden;
 	box-shadow:0px 5px 8px #eeeeee;
 	display:flex;
