--- a/SAEW/src/main/webapp/css/historico.css
+++ b/SAEW/src/main/webapp/css/historico.css
@@ -72,11 +72,10 @@ body{
 	height:300px;
 	display:flex;
 	flex-direction:column;
-	/*justify-content:space-between;*/
 }
 
 .avaliacao-cont{
-	width:60%;
+	width:85.5%;
 	height:600px;
 	background-color:#ffffff;
 	padding:10px;
@@ -86,49 +85,6 @@ body{
 	justify-content:space-between;
 	/*border:0.5px solid #5D6D7E;*/
 }
-
-.avaliacao-titulo{
-	padding-left:20px;
-}
-
-
-
-/*FILTRO*/
-.filtro{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	align-items:center;
-	padding-bottom:10px;
-}
-
-.pesquisa{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-	align-items:center;
-}
-
-.pesquisa input{
-	font-size:14px;
-	outline:none;
-	padding:5px;
-}
-
-.pacient{
-	margin-left:20px;
-}
-
-.filter-icon {
-	margin-right:10px;
-}
-
-.filter-icon i{
-	font-size:21px;
-}
-
-/**/
-
 
 .butao-cont div{
 	display:flex;
@@ -152,13 +108,13 @@ body{
 	flex-direction:row;
 	padding:20px 17px;
 	margin-bottom:5px;
-	background-color:#5D6D7E;
-	border:1px solid #5D6D7E;
+	background-color:#26bd70;
+	border:1px solid #26bd70;
 }
 
 .btn-avaliacao a:hover{
-	background-color:#70849a;
-	border:1px solid #70849a;
+	background-color:#32cd7e;
+	border:1px solid #32cd7e;
 }
 
 .btn-avaliacao i{
@@ -178,7 +134,7 @@ body{
 	display:flex;
 	flex-direction:row;
 	padding:20px 17px;
-	margin:5px 0px;
+	margin-bottom:10px;
 	background-color:#5D6D7E;
 	border:1px solid #5D6D7E;
 }
@@ -254,10 +210,68 @@ body{
 	color:white;
 }
 
+
+
+/*TABELA*/
+.avaliacao-cont table{
+	border-collapse:collapse;
+	border:1px solid #ffffff;
+	width:100%;
+}
+
+.avaliacao-cont td{
+	padding:5px 20px;
+	border:1px solid #f9f9f9;
+	font-size:14px;
+}
+
+.avaliacao-cont thead td{
+	font-weight:500;
+}
+
+
+
+/*FILTRO*/
+.filtro{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	align-items:center;
+	padding-bottom:10px;
+}
+
+.pesquisa{
+	display:flex;
+	flex-direction:row;
+	justify-content:space-between;
+	align-items:center;
+}
+
+.pesquisa input{
+	font-size:14px;
+	outline:none;
+	padding:5px;
+	/*font-weight:500;*/
+}
+
+.pacient{
+	margin-left:20px;
+}
+
+.filter-icon {
+	margin-right:10px;
+}
+
+.filter-icon i{
+	font-size:21px;
+}
+
+/**/
+
 .check-item input{
 	margin:7px 0px;
-	/*cursor:pointer;*/
-	/*background-color:#5D6D7E;*/
+	cursor:pointer;
+	background-color:#5D6D7E;
 }
 
 .check-item label{
@@ -292,126 +306,4 @@ body{
 .esq{
 	padding-left:40px;
 	padding-top:15px;
-}
-
-/**/
-
-/*PACIENTE*/
-.paciente{
-	width:25%;
-	background-color:#ffffff;
-	margin-left:20px;
-	padding:15px;
-}
-
-
-/**/
-.codito{
-	display:flex;
-	flex-direction:row;
-}
-
-.text{
-	display:flex;
-	flex-direction:row;
-}
-
-.text input{
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-.input-leito{
-	margin-left:90px;
-}
-
-
-.input-paciente{
-	display:flex;
-	flex-direction:column;
-}
-
-.input-paciente input{
-	width:100%;
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-
-.interna{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
-
-.text-interna{
-	display:flex;
-	flex-direction:row;
-	width:70px;
-}
-
-.text-interna input{
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-.text-internacao{
-	margin-right:10px;
-}
-
-.text-internacao input{
-	width:100%;
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-
-.nascimento{
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
-
-.text-nasc{
-	display:flex;
-	flex-direction:row;
-	width:70px;
-}
-
-.text-nasc input{
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-.text-nascimento{
-	margin-right:10px;
-}
-
-.text-nasc input, .text-nascimento input{
-	width:100%;
-	outline:none;
-	padding:2px;
-	font-size:14px;
-}
-
-.codito, .input-paciente, .interna, .nascimento, .perido{
-	margin-bottom:4px;
-}
-
-/*TEXT INPUT GERAL*/
-.drenagem{
-	display:flex;
-	flex-direction:row;
-}
-
-.drenagem input{
-	outline:none;
-	padding:4px;
-	font-size:14px;
-	width:100%;
 }
