Trabalhando na tabela de consulta de diagnosticos

--- a/SAEW/src/main/webapp/css/diagnostico.css
+++ b/SAEW/src/main/webapp/css/diagnostico.css
@@ -69,7 +69,7 @@ body{
 }
 
 .avaliargem{
-	height:300px;
+	height:auto; /*300px*/
 	display:flex;
 	flex-direction:column;
 	/*justify-content:space-between;*/
