Trocando a forma de submissão de dados de tag a para tag button

--- a/SAEW/src/main/webapp/css/diagnostico.css
+++ b/SAEW/src/main/webapp/css/diagnostico.css
@@ -107,6 +107,33 @@ body{
 	font-size:14px;
 }
 
+/**/
+button{
+	padding:20px 17px;
+	margin:5px 0px;
+	background-color:#5D6D7E;
+	border:1px solid #5D6D7E;
+	display:flex;
+	flex-direction:row;
+	border-radius:5px;
+	cursor:pointer;
+	color:#eeeeee;
+	font-size:14px;
+}
+
+button i{
+	color:#eeeeee;
+	font-size:22px;
+	margin-right:15px;
+}
+
+button:hover{
+	background-color:#70849a;
+	border:1px solid #70849a;
+}
+
+/**/
+
 /*BOTAO NOVA AVALIACAO*/
 .btn-avaliacao a{
 	display:flex;
@@ -326,7 +353,7 @@ body{
 .text-interna{
 	display:flex;
 	flex-direction:row;
-	width:90px;
+	width:100px;
 }
 
 .text-interna input{
@@ -356,7 +383,7 @@ body{
 .text-nasc{
 	display:flex;
 	flex-direction:row;
-	width:90px;
+	width:100px;
 }
 
 .text-nasc input{
