Trabalhando no file paciente  servlet

--- a/SAEW/src/main/webapp/css/diagnostico_consult.css
+++ b/SAEW/src/main/webapp/css/diagnostico_consult.css
@@ -372,20 +372,29 @@ table thead td:nth-child(5){
 	width:100px;
 }
 
-table thead td:nth-child(6), table thead td:nth-child(7){
+table thead td:nth-child(8), table thead td:nth-child(9){
 	padding:10px 6px;
+	width:58px;
 }
 
-table tbody td:nth-child(3){
-	width:430px;
+table tbody td{
+	max-width:175px;
 }
 
-table tbody td:nth-child(6) i:nth-child(1){
+table tbody td:nth-child(2){
+	width:350px;
+}
+
+table tbody td:nth-child(5){
+	width:160px;
+}
+
+table tbody td:nth-child(8) i:nth-child(1){
 	color:#5d6d7e; 
 	font-size:18px;
 }
 
-table tbody td:nth-child(7) i:nth-child(1){
+table tbody td:nth-child(9) i:nth-child(1){
 	color:#e44848; 
 	font-size:18px;
 }
