--- a/SAEW/src/main/webapp/css/diagnostico.css
+++ b/SAEW/src/main/webapp/css/diagnostico.css
@@ -6,7 +6,7 @@
     list-style: none;
     text-decoration: none;
     overflow-x: hidden;
-    font-family: OpenSans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    font-family: Poppins;
     box-sizing: border-box;
 }
 
@@ -78,7 +78,7 @@ body{
 .avaliacao-cont{
 	width:60%;
 	height:600px;
-	background-color:#ffffff;
+	background-color:#fcfcfc;
 	padding:10px;
 	
 	display:flex;
@@ -303,7 +303,7 @@ button:hover{
 /*PACIENTE*/
 .paciente{
 	width:25%;
-	background-color:#ffffff;
+	background-color:#fcfcfc;
 	margin-left:20px;
 	padding:15px;
 }
