--- a/SAEW/src/main/webapp/css/paciente_consult.css
+++ b/SAEW/src/main/webapp/css/paciente_consult.css
@@ -6,7 +6,7 @@
     list-style: none;
     text-decoration: none;
     overflow-x: hidden;
-    font-family: OpenSans,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
+    font-family: Poppins;
     box-sizing: border-box;
 }
 
